<resources>
    <string name="app_name">MyLayout</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="bracket">( )</string>
    <string name="percent">%</string>
    <string name="obelus">÷</string>
    <string name="times">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="sign">+/-</string>
    <string name="decimal_point">.</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="todo">할일</string>

</resources>