<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculatior">

        <LinearLayout
            android:id="@+id/result_board"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="7"
            app:layout_constraintBottom_toTopOf="@id/tool_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:id="@+id/result_board1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:cursorVisible="true" />

            <View
                android:id="@+id/result_board2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_board"
            app:layout_constraintVertical_weight="0.1">

            <ImageButton
                android:id="@+id/before"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="#fff"
                android:src="@drawable/time2"
                app:tint="@color/background_grey" />

            <ImageButton
                android:id="@+id/standard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:src="@drawable/unit2"
                app:tint="#5A5959" />

            <ImageButton
                android:id="@+id/more"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:src="@drawable/calculate2"
                app:tint="#5A5959" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="#fff"
                android:src="@drawable/delete2"
                app:tint="#5965B30B" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/background_grey"
            app:layout_constraintBottom_toTopOf="@id/keypad"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar" />

        <TableLayout
            android:id="@+id/keypad"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintVertical_weight="1.7">

            <TableRow
                android:layout_weight="1"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/c"
                    android:textColor="@color/red"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/bracket"
                    android:textColor="@color/background_green"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/percent"
                    android:textColor="@color/background_green"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/obelus"
                    android:textColor="@color/background_green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/seven"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/eight"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/nine"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/times"
                    android:textColor="@color/background_green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/four"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/five"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/six"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/minus"
                    android:textColor="@color/background_green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/one"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/two"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/three"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/plus"
                    android:textColor="@color/background_green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/sign"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/zero"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_gray"
                    android:stateListAnimator="@null"
                    android:text="@string/decimal_point"
                    android:textColor="@color/fontgrey"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_green"
                    android:stateListAnimator="@null"
                    android:text="@string/equal"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>